# saliency-matting-collections

./: .gitignore  CMakeLists.txt  README.md
include/cluster/: ap_cluster.h  gmm.h
include/common/: CmCv.h  CmLib.h  common.h  file_ops.h  my_common.h
include/matting/: saliency_cut.h  sharedmatting.h
include/saliency/: GMRsaliency.h  fasa.h  saliency_gc.h  saliency_rc.h
include/segmentation/: SLIC.h
include/segmentation/EfficientGraphBased/: segment-image.h
include/segmentation/Maxflow/: block.h  graph.h
src/: main.cpp
src/cluster/: ap_cluster.cpp  color_quantize.cpp
src/common/: CmCv.cpp  common.cpp  file_ops.cpp  gmm.cpp
src/matting/: saliency_cut.cpp  sharedmatting.cpp
src/saliency/: FASA.cpp  GMRsaliency.cpp  saliency_rc.cpp
src/segmentation/: SLIC.cpp  segment-image.cpp
